[gd_scene load_steps=25 format=3 uid="uid://dnhhw1sgu1io8"]

[ext_resource type="Script" path="res://Scenes/Game.gd" id="1_bv8oq"]
[ext_resource type="Texture2D" uid="uid://bo5nh38taaw22" path="res://Assets/tang.jpg" id="2_upusw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_shps5"]

[sub_resource type="InputEventKey" id="InputEventKey_khidd"]
keycode = 68

[sub_resource type="Shortcut" id="Shortcut_sivo7"]
events = [SubResource("InputEventKey_khidd")]

[sub_resource type="InputEventKey" id="InputEventKey_6q8na"]
device = -1
keycode = 70
unicode = 70

[sub_resource type="Shortcut" id="Shortcut_han6x"]
events = [SubResource("InputEventKey_6q8na")]

[sub_resource type="InputEventKey" id="InputEventKey_6dmna"]
device = -1
keycode = 74
unicode = 106

[sub_resource type="Shortcut" id="Shortcut_csmei"]
events = [SubResource("InputEventKey_6dmna")]

[sub_resource type="InputEventKey" id="InputEventKey_2645n"]
device = -1
keycode = 75
unicode = 107

[sub_resource type="Shortcut" id="Shortcut_o13yq"]
events = [SubResource("InputEventKey_2645n")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_steff"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydh3o"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x48sg"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mtkbi"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_of01j"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)

[sub_resource type="Curve2D" id="Curve2D_kp2mw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 50, -130, 0, 0, 0, 0, 50, 518)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_oo0e0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 150, -130, 0, 0, 0, 0, 150, 518)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_iovxq"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 250, -130, 0, 0, 0, 0, 250, 518)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_hkl7c"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 350, -130, 0, 0, 0, 0, 350, 518)
}
point_count = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rlif1"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0

[sub_resource type="Animation" id="Animation_jyrhk"]
resource_name = "Begin"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -648), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StartMask:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StartMask:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_so20x"]
resource_name = "End"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Left/Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(0, 1, 0, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/Left/Header/TextureRect:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Left/Header/TextureRect:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wu56e"]
_data = {
"Begin": SubResource("Animation_jyrhk"),
"End": SubResource("Animation_so20x")
}

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bv8oq")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Header" type="Panel" parent="Container/Left"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="Container/Left/Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -70.0
offset_right = 398.0
offset_bottom = 398.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_upusw")

[node name="Label" type="Label" parent="Container/Left"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "魅力时刻"

[node name="Power" type="Panel" parent="Container/Left"]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="Container/Left/Power"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Left/Power/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="Container/Left/Power/VBoxContainer2"]
layout_mode = 2

[node name="ButtonBar" type="HBoxContainer" parent="Container/Left/Power/VBoxContainer2"]
light_mask = 2
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="DButton" type="Button" parent="Container/Left/Power/VBoxContainer2/ButtonBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_shps5")
button_mask = 0
shortcut = SubResource("Shortcut_sivo7")
shortcut_in_tooltip = false
text = "D"

[node name="FButton" type="Button" parent="Container/Left/Power/VBoxContainer2/ButtonBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_shps5")
button_mask = 0
shortcut = SubResource("Shortcut_han6x")
shortcut_in_tooltip = false
text = "F"

[node name="JButton" type="Button" parent="Container/Left/Power/VBoxContainer2/ButtonBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_shps5")
button_mask = 0
shortcut = SubResource("Shortcut_csmei")
shortcut_in_tooltip = false
text = "J"

[node name="KButton" type="Button" parent="Container/Left/Power/VBoxContainer2/ButtonBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_shps5")
button_mask = 0
shortcut = SubResource("Shortcut_o13yq")
shortcut_in_tooltip = false
text = "K"

[node name="Center" type="VBoxContainer" parent="Container"]
layout_mode = 2

[node name="Keyboard" type="Panel" parent="Container/Center"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_steff")
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Container/Center/Keyboard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Container/Center/Keyboard/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ydh3o")

[node name="Panel2" type="Panel" parent="Container/Center/Keyboard/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_x48sg")

[node name="Panel3" type="Panel" parent="Container/Center/Keyboard/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_mtkbi")

[node name="Panel4" type="Panel" parent="Container/Center/Keyboard/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_of01j")

[node name="PathD" type="Path2D" parent="Container/Center/Keyboard"]
curve = SubResource("Curve2D_kp2mw")

[node name="PathF" type="Path2D" parent="Container/Center/Keyboard"]
curve = SubResource("Curve2D_oo0e0")

[node name="PathJ" type="Path2D" parent="Container/Center/Keyboard"]
curve = SubResource("Curve2D_iovxq")

[node name="PathK" type="Path2D" parent="Container/Center/Keyboard"]
curve = SubResource("Curve2D_hkl7c")

[node name="Right" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="TimerTitle" type="Label" parent="Container/Right"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "计时"
horizontal_alignment = 1

[node name="Timer" type="Label" parent="Container/Right"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "00:00"
horizontal_alignment = 1

[node name="AccuracyTitle" type="Label" parent="Container/Right"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "准确率"
horizontal_alignment = 1

[node name="Accuracy" type="Label" parent="Container/Right"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "100%"
horizontal_alignment = 1

[node name="Collection" type="Panel" parent="Container/Right"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_group_ = true

[node name="Words" type="RichTextLabel" parent="Container/Right/Collection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_rlif1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wu56e")
}

[node name="GameTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]

[node name="StartMask" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 0.000732422
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(576, 324)

[node name="Count" type="Label" parent="StartMask"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 200
text = "3"

[connection signal="game_over" from="." to="." method="_game_over"]
[connection signal="game_start" from="." to="." method="_game_start"]
[connection signal="pressed" from="Container/Left/Power/VBoxContainer2/ButtonBar/DButton" to="." method="_on_d_button_pressed"]
[connection signal="pressed" from="Container/Left/Power/VBoxContainer2/ButtonBar/FButton" to="." method="_on_f_button_pressed"]
[connection signal="pressed" from="Container/Left/Power/VBoxContainer2/ButtonBar/JButton" to="." method="_on_j_button_pressed"]
[connection signal="pressed" from="Container/Left/Power/VBoxContainer2/ButtonBar/KButton" to="." method="_on_k_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
